# rust-kg-explorer

./: .gitignore  Cargo.toml  Readme.md  debug.html  result.html  worksheet.ipynb
ml/: ml_training.ipynb  model.onnx
routines/: address_cleanup.sparql  airport.sparql  book.sparql  class_graph.sparql  country.sparql  general.sparql  imgs.sparql  url_cleanup.sparql
src/: item.rs  main.rs  store.rs  utils.rs
src/web_ui/: html_templates.rs  mod.rs  server.rs  templetization.rs
templates/: entity.html  explore.html  graph_renderer.js  history.html  index.html  query.html  query.js  redirect.html  routines.html
templates/analysis/: class_analysis.html  graph.html  index.html  predicate_analysis.html
templates/parts/: class_card.html  nav.html  object_card.html
