[package]
name = "kg-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5.40", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1.1.2"
oxigraph = "0.4.11"
oxrdfio = "0.1.8"
percent-encoding = "2.3.1"
petgraph = "0.8.2"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = {version = "0.12.20", features=["blocking"]}
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tract-onnx = "0.21.0"
url = "2.5.4"

[profile.dev]
opt-level = 3
